fix: add z-index/remove overflow by .sponsors

--- a/sass/block/_sponsors.sass
+++ b/sass/block/_sponsors.sass
@@ -7,6 +7,7 @@
     max-width: 947px
     margin: 0 auto
     padding-right: 25px
+    overflow: hidden
   &-info
     position: relative
     top: -11px
@@ -31,6 +32,7 @@
     grid-column-gap: 47px
     grid-row-gap: 24px
     padding-top: 36px
+    z-index: 10
     &__item
       position: relative
       display: flex
